Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-35287

[Durability]: Rebalance In 2 nodes failed. KV disconnects ns_server "Trying to handle an unknown response DCP_COMMIT, disconnecting" [ETA:29/7/19]

    XMLWordPrintable

Details

    • Triaged
    • Unknown
    • KV-Engine MH Beta part 2

    Description

      Steps to reproduce

      1. Create a 2 node cluster - Both KV nodes
      Rebalance Overview

      +----------------+----------------------------+--------------+
      | Nodes          | Services                   | Status       |
      +----------------+----------------------------+--------------+
      | 172.23.104.202 | [u'index', u'kv', u'n1ql'] | Cluster node |
      | 172.23.104.203 | None                       | <--- IN ---  |
      +----------------+----------------------------+--------------+
      

      2. Create a default bucket with replica=1
      3. Create 50000 docs with durability=Majority

      Bucket statistics

      +---------+---------+----------+-----+-------+------------+-----------+-----------+
      | Bucket  | Type    | Replicas | TTL | Items | RAM Quota  | RAM Used  | Disk Used |
      +---------+---------+----------+-----+-------+------------+-----------+-----------+
      | default | membase | 2        | 0   | 50000 | 3961520128 | 154375040 | 265460572 |
      +---------+---------+----------+-----+-------+------------+-----------+-----------+
      

      4. Rebalance In 2 new nodes and in parallel start another load of new 50k docs with durability=majority.

      Rebalance Overview

      +----------------+----------------------------+--------------+
      | Nodes          | Services                   | Status       |
      +----------------+----------------------------+--------------+
      | 172.23.104.203 | [u'kv']                    | Cluster node |
      | 172.23.104.202 | [u'index', u'kv', u'n1ql'] | Cluster node |
      | 172.23.104.208 | None                       | <--- IN ---  |
      | 172.23.104.211 | None                       | <--- IN ---  |
      +----------------+----------------------------+--------------+
      

      5. Rebalance failed

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ritesh.agarwal Ritesh Agarwal
              ritesh.agarwal Ritesh Agarwal
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty